[FIX] IT1: Fix so text doesn't wrap

--- a/css/main_page/home.css
+++ b/css/main_page/home.css
@@ -37,7 +37,7 @@
 
 .home-content .text-animate {
     position: relative;
-    width: 32.8rem;
+    width: 36rem;
 }
 
 .home-content .text-animate h3 {
@@ -49,6 +49,7 @@
     background-repeat: no-repeat;
     -webkit-background-clip: text;
     background-position: -33rem 0;
+    white-space: nowrap;
 }
 
 .home.show-animate .home-content .text-animate h3 {
@@ -245,10 +246,11 @@
     0%,
     10%,
     100% {
-        background-position: -33rem 0;
+        background-position: -5% 0;
     }
 
     65%,
+    78%,
     85% {
         width: 96%;
         background-position: 0 0;
@@ -260,19 +262,14 @@
     0%,
     10%,
     100% {
-        width: 0;
+        background-position: -5% 0;
     }
 
     65%,
     78%,
     85% {
-        width: 95%;
-        opacity: 1;
-    }
-
-    75%,
-    85% {
-        opacity: 0;
+        width: 96%;
+        background-position: 0 0;
     }
 }
 
